# xiaoqieYUN

./: .gitignore  LICENSE  README.md
LinuxServer/: CMakeLists.txt  README.md  listenForClients.c  server.c  serverForClient.c
LinuxServer/doc/: README.md
LinuxServer/script/: FileLists.sh  小说.txt  期中测试提交模板.docx
LinuxServer/src/: CMakeLists.txt  README.md  main.c
LinuxServer/src/cjson/: CMakeLists.txt
LinuxServer/src/database/: CMakeLists.txt  README.md  database.c  database.h
LinuxServer/src/message/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  msg.c  msg.h  msgType.h  nstdmsgio.h  recvMsg.c  recvMsg.h  sendMsg.c  sendMsg.h
LinuxServer/src/operating/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  serverOperating.c  serverOperating.h
LinuxServer/src/queue/: CMakeLists.txt  README.md  clientThreadPoolQueue.c  clientThreadPoolQueue.h  queue.c  queue.h  socketQueue.c  socketQueue.h  threadPool.c  threadPool.h
LinuxServer/src/socket/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  serverFileSocket.c  serverFileSocket.h  serverSocket.c  serverSocket.h
LinuxServer/src/tools/: CMakeLists.txt  README.md  tools.c  tools.h
WindowsClient/: README.md
WindowsClient/PenguinCloud/: PenguinCloud.pro  PenguinCloud.rc  PenguinCloud.sln  PenguinCloud.vcxproj  PenguinCloud.vcxproj.filters  loginwidget.cpp  loginwidget.h  main.cpp  mainwidget.cpp  mainwidget.h  password.txt  registerwidget.cpp  registerwidget.h  resource.qrc  stable.h  widget.cpp  widget.h
WindowsClient/PenguinCloud/basiccontrol/: README.txt  VideoMainWidget.cpp  VideoMainWidget.h  VideoWidget.cpp  VideoWidget.h  basiccontrol.pri  combobox.cpp  combobox.h  downloadmanage.cpp  downloadmanage.h  filetablewidget.cpp  filetablewidget.h  imagepreview.cpp  imagepreview.h  lineedit.cpp  lineedit.h  managewidget.cpp  managewidget.h  musicbutton.cpp  musicbutton.h  musicmainwidget.cpp  musicmainwidget.h  pdfwidget.cpp  pdfwidget.h  uploadmanage.cpp  uploadmanage.h
WindowsClient/PenguinCloud/basicwidget/: README.txt  basicwidget.cpp  basicwidget.h  basicwidget.pri  mymessagebox.cpp  mymessagebox.h
WindowsClient/PenguinCloud/file/: file.cpp  file.h  file.pri  fileobject.cpp  fileobject.h  folder.cpp  folder.h
WindowsClient/PenguinCloud/logic/: connecttoserver.cpp  connecttoserver.h  logic.pri  login.cpp  login.h  macro.h  (+4 more)
WindowsClient/build-PenguinCloud-Desktop_Qt_5_8_0_GCC_64bit-Debug/: Makefile  PenguinCloud  moc_basicwidget.cpp  moc_combobox.cpp  moc_connecttoserver.cpp  moc_lineedit.cpp  moc_loginwidget.cpp  moc_predefs.h  moc_tcpconnect.cpp  qrc_resource.cpp
文档/: CLion的使用说明.docx  README.md  关于文件传输及预览的技术报告.docx  分享文件方法.docx  客户端连接队列.docx  小企鹅云盘.docx  服务器基本框架.docx  队列.docx
(+74 files in other folders)
